update algorithm to improve performance